# opencl-examples

./: CMakeLists.txt  CmakeLists.txt  Dockerfile  README.md  build.sh  container.sh
ExternalKernel/: CMakeLists.txt  README.md  main.cpp
HardwareInfo/: CMakeLists.txt  README.md  main.cpp
HelloWorld/: CMakeLists.txt  CmakeLists.txt  HelloWorld.cl  README.md  cl_error.h  main.cpp
MultiDimProc/: CMakeLists.txt  HelloWorld.cl  README.md  main.cpp
clErrorView/: CMakeLists.txt  README.md
utils/: cl_error.h  cl_helper.hpp
